[tool.poetry]
name = "nonebot_plugin_ayaka_scan_cmd"
version = "0.2.0"
description = "扫描当前所有matcher，总结命令"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bridgeL/nonebot-plugin-ayaka-scan-cmd"
packages = [
    { include = "nonebot_plugin_ayaka_scan_cmd.py", from = "." },
]


[tool.poetry.dependencies]
python = "^3.10"
ayaka = { version = ">=0.0.4.2b1, <0.0.5.0", extras = ["nb2ob11"] }


[tool.nonebot]
plugins = []
plugin_dirs = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
